--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 .paragraph-1 {
   color: cornflowerblue;
-  font-family:'Courier New', Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
   font-size: 100%; 
-  padding: 2px;
+    padding: 2px;
 }
 
-table, th, td {
+table,
+th,
+td {
   border: 1px solid black;
   width: 15%;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
